--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
+                <div id="#block"></div>
+                <div id="#triangle"></div>
             </div>  
         </div>
         <script type="text/javascript" src="cordova.js"></script>
