--- a/index.html
+++ b/index.html
@@ -31,14 +31,9 @@
 
     </head>
     <body>
-        <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-                <div id="#block"></div>
-                <div id="#triangle"></div>
-            </div>  
+        <div id="content">
+            <div id="block">&nbsp;</div>
+            <div id="triangle">&nbsp;</div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
