--- a/index.html
+++ b/index.html
@@ -27,19 +27,15 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>UniRN App</title>
-
-    </head>
-    <body>
-        <div id="content">
-            <div id="block">&nbsp;</div>
-            <div id="triangle">&nbsp;</div>
-        </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
+        <title>UniRN App</title>
+    </head>
+    <body onload="onLoad()">
+        <div id="content">
+            <div id="block">&nbsp;</div>
+            <div id="triangle"></div>
+        </div>
     </body>
 </html>
