--- a/index.html
+++ b/index.html
@@ -1,41 +1,107 @@
 <!DOCTYPE html>
-<!--
-    Copyright (c) 2012-2014 Adobe Systems Incorporated. All rights reserved.
-
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
+<!--[if IEMobile 7 ]>    <html class="no-js iem7"> <![endif]-->
+<!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js"> <!--<![endif]-->
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+		<meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <title>UniRN App</title>
-    </head>
-    <body onload="onLoad()">
-        <div id="content">
-            <div id="block">&nbsp;</div>
-            <div id="triangle"></div>
-        </div>
-    </body>
+
+
+
+		<!-- This script prevents links from opening in Mobile Safari. https://gist.github.com/1042026 -->
+		<!--
+		<script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
+		-->
+		<script src="assets/js/cordova-2.7.0.js"></script>
+		<script src="assets/js/jquery.js"></script>
+		<script src="assets/js/jquery.mobile-1.3.1.min.js"></script>
+
+		<link rel="stylesheet" href="assets/css/style.css">
+		<link rel="stylesheet" href="assets/css/themes/default/jquery.mobile-1.3.1.css">
+		<link rel="stylesheet" href="assets/css/themes/default/jquery.mobile-1.3.1.min.css">
+		<link rel="stylesheet" href="assets/css/themes/default/jquery.mobile.structure-1.3.1.css">
+		<link rel="stylesheet" href="assets/css/themes/default/jquery.mobile.structure-1.3.1.min.css">
+		<link rel="stylesheet" href="assets/css/themes/default/jquery.mobile.theme-1.3.1.css">
+		<link rel="stylesheet" href="assets/css/themes/default/jquery.mobile.theme-1.3.1.min.css">
+	</head>
+	<body>
+
+		<div data-role="page" class="jqm-demos ui-responsive-panel" id="panel-fixed-page1">
+			<div data-role="header" data-theme="f" data-position="fixed">
+				<h1>Cabeçalho</h1>
+				<a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
+				<a href="#add-form" data-icon="gear" data-iconpos="notext">Add</a>
+			</div><!-- /header -->
+
+			<div data-role="content" class="jqm-content">
+
+				<h1>Localização</h1>
+
+				<h2>Posicionamento fixo</h2>
+
+				<p><a href="#" onclick="showAlert(); return false;">Alerta</a></p>
+
+				<div>
+					<img style="display:none; width:100%;" id="largeImage" src="" />
+					<button onclick="capturePhoto();">Capturar Photo</button>
+				    <button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">From Photo Library</button>
+				    <img onclick="showpic()" style="display:none;width:60px;height:60px;" id="smallImage" src="" />
+				    <p id="conection"></p>
+					<!-- <div id="accelerometer">Waiting for accelerometer...</div> -->
+					<div id="block" ></div>
+					<br/>
+					<div id="triangle"></div>
+    				<button onclick="stopWatch();">Stop Watching</button>
+				</div>
+
+			</div><!-- /content -->
+
+			<div data-role="footer" data-position="fixed" data-theme="f">
+				<h4>App demo</h4>
+			</div>
+			<div data-role="panel" data-position-fixed="true" data-theme="a" id="nav-panel">
+
+				<ul data-role="listview" data-theme="a" class="nav-search">
+					<li data-icon="delete">
+						<a href="#" data-rel="close">Close menu</a>
+					</li>
+				</ul>
+
+			</div><!-- /panel -->
+			<div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="b" id="add-form">
+
+		        <form class="userform">
+
+		        	<h2>Login</h2>
+
+		            <label for="name">Username:</label>
+		            <input type="text" name="name" id="name" value="" data-clear-btn="true" data-mini="true">
+
+		            <label for="password">Password:</label>
+		            <input type="password" name="password" id="password" value="" data-clear-btn="true" autocomplete="off" data-mini="true">
+
+		            <div class="ui-grid-a">
+		                <div class="ui-block-a"><a href="#" data-rel="close" data-role="button" data-theme="c" data-mini="true">Cancel</a></div>
+		                <div class="ui-block-b"><a href="#" data-rel="close" data-role="button" data-theme="b" data-mini="true">Save</a></div>
+					</div>
+		        </form>
+
+			</div><!-- /panel -->
+
+
+		</div> <!-- /page -->
+
+		<!-- Add your site or application content here -->
+		<script src="assets/js/index.js"></script>
+		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+		<script>
+			var _gaq=[["_setAccount","UA-XXXXX-X"],["_trackPageview"]];
+			(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
+			g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
+			s.parentNode.insertBefore(g,s)}(document,"script"));
+		</script>
+	</body>
 </html>
