--- a/teste.html
+++ b/teste.html
@@ -34,6 +34,9 @@
                     <a href="#" data-rel="close">Fechar menu</a>
                 </li>
                 <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
                     <a href="teste.html">Formulário</a>
                 </li>
             </ul>
