--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     -->
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/jquery.mobile-1.4.3.min.js"></script>
+    <script src="assets/js/index.js"></script>
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/jquery.mobile-1.4.3.min.css">
 </head>
-<body>
+<body onload="onLoad()">
 
     <div data-role="page" class="jqm-demos ui-responsive-panel" id="panel-fixed-page1">
         <div data-role="header" data-theme="f" data-position="fixed">
@@ -61,7 +62,6 @@
     </div> <!-- /page -->
 
     <!-- Add your site or application content here -->
-    <script src="assets/js/index.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 </body>
 </html>
