--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     -->
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/jquery.mobile-1.4.3.min.js"></script>
+    <script src="assets/js/cordova.js"></script>
     <script src="assets/js/index.js"></script>
 
     <link rel="stylesheet" href="assets/css/style.css">
