--- a/teste.html
+++ b/teste.html
@@ -15,8 +15,9 @@
     -->
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/jquery.mobile-1.4.3.min.js"></script>
+    <script src="assets/js/cordova.js"></script>
     <script src="assets/js/index.js"></script>
-
+    
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/jquery.mobile-1.4.3.min.css">
 </head>
