--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/jquery.mobile-1.4.3.min.css">
 </head>
-<body onload="onLoad()">
+<body>
 
     <div data-role="page" class="jqm-demos ui-responsive-panel" id="panel-fixed-page1">
         <div data-role="header" data-theme="f" data-position="fixed">
