--- a/teste.html
+++ b/teste.html
@@ -13,11 +13,11 @@
         <!--
         <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
     -->
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/jquery.mobile-1.4.3.min.js"></script>
-    <script src="assets/js/cordova.js"></script>
-    <script src="assets/js/index.js"></script>
-    
+    <script type="text/javascript" language="JavaScript" src="cordova.js"></script>
+    <script language="JavaScript" src="assets/js/jquery.js"></script>
+    <script language="JavaScript" src="assets/js/jquery.mobile-1.4.3.min.js"></script>
+    <script language="JavaScript" src="assets/js/index.js"></script>
+
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/jquery.mobile-1.4.3.min.css">
 </head>
