--- a/teste.html
+++ b/teste.html
@@ -41,6 +41,9 @@
                 <li>
                     <a href="teste.html">Formulário</a>
                 </li>
+                <li>
+                    <a href="browser.html">Browser</a>
+                </li>
             </ul>
 
         </div><!-- /panel -->
