--- a/browser.html
+++ b/browser.html
@@ -13,15 +13,20 @@
         <!--
         <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
     -->
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/jquery.mobile-1.4.3.min.js"></script>
-    <script src="assets/js/cordova.js"></script>
-    <script src="assets/js/index.js"></script>
+    <script type="text/javascript" language="JavaScript" src="cordova.js"></script>
+    <script language="JavaScript" src="assets/js/jquery.js"></script>
+    <script language="JavaScript" src="assets/js/jquery.mobile-1.4.3.min.js"></script>
+    <script>
+    document.addEventListener('deviceready', onDeviceReady, true);
+    function onDeviceReady() {	
+		ref = window.open(encodeURI('http://facebook.com'), '_self', 'location=no');
+	}
+    </script>
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/jquery.mobile-1.4.3.min.css">
 </head>
-<body>
+<body onload="onLoad()">
 
     <div data-role="page" class="jqm-demos ui-responsive-panel" id="panel-fixed-page1">
         <div data-role="header" data-theme="f" data-position="fixed">
@@ -50,25 +55,31 @@
 
         <div data-role="content" class="jqm-content">
 
-            <h1>H1</h1>
+           <form class="userform">
 
-            <h2>H2</h2>
-            <h3>H3</h3>
-            <h4>H4</h4>
-            <h5>H5</h5>
-            <h6>H6</h6>
+            <h2>Login</h2>
 
-            <p><a href="#" id="alert">Alerta</a></p>
+            <label for="name">Username:</label>
+            <input type="text" name="name" id="name" value="" data-clear-btn="true" data-mini="true">
 
-        </div><!-- /content -->
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password" value="" data-clear-btn="true" autocomplete="off" data-mini="true">
 
-        <div data-role="footer" data-position="fixed" data-theme="f">
-            <h4>UniRN APP</h4>
-        </div>
+            <div class="ui-grid-a">
+                <div class="ui-block-a"><a href="#" data-rel="close" data-role="button" data-theme="c" data-mini="true">Cancel</a></div>
+                <div class="ui-block-b"><a href="#" data-rel="close" data-role="button" data-theme="b" data-mini="true">Save</a></div>
+            </div>
+        </form>
 
-    </div> <!-- /page -->
+    </div><!-- /content -->
 
-    <!-- Add your site or application content here -->
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <div data-role="footer" data-position="fixed" data-theme="f">
+        <h4>UniRN APP</h4>
+    </div>
+
+</div> <!-- /page -->
+
+<!-- Add your site or application content here -->
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 </body>
 </html>
