--- a/browser.html
+++ b/browser.html
@@ -2,84 +2,64 @@
 <!--[if IEMobile 7 ]>    <html class="no-js iem7"> <![endif]-->
 <!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="msapplication-tap-highlight" content="no" />
-    <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+	<meta charset="utf-8">
+	<title></title>
+	<meta name="msapplication-tap-highlight" content="no" />
+	<!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
 
 
 
-    <!-- This script prevents links from opening in Mobile Safari. https://gist.github.com/1042026 -->
+	<!-- This script prevents links from opening in Mobile Safari. https://gist.github.com/1042026 -->
         <!--
         <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
     -->
     <script type="text/javascript" language="JavaScript" src="cordova.js"></script>
     <script language="JavaScript" src="assets/js/jquery.js"></script>
     <script language="JavaScript" src="assets/js/jquery.mobile-1.4.3.min.js"></script>
-    <script>
-    document.addEventListener('deviceready', onDeviceReady, true);
-    function onDeviceReady() {	
-		ref = window.open(encodeURI('http://facebook.com'), '_self', 'location=no');
-	}
-    </script>
+    <script language="JavaScript" src="assets/js/browser.js"></script>
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/jquery.mobile-1.4.3.min.css">
 </head>
 <body onload="onLoad()">
 
-    <div data-role="page" class="jqm-demos ui-responsive-panel" id="panel-fixed-page1">
-        <div data-role="header" data-theme="f" data-position="fixed">
-            <h1>Cabeçalho</h1>
-            <a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
-        </div><!-- /header -->
+	<div data-role="page" class="jqm-demos ui-responsive-panel" id="panel-fixed-page1">
+		<div data-role="header" data-theme="f" data-position="fixed">
+			<h1>Cabeçalho</h1>
+			<a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
+		</div><!-- /header -->
 
-        <div data-role="panel" data-position-fixed="true" data-theme="a" id="nav-panel">
+		<div data-role="panel" data-position-fixed="true" data-theme="a" id="nav-panel">
 
-            <ul data-role="listview" data-theme="a" class="nav-search">
-                <li data-icon="delete">
-                    <a href="#" data-rel="close">Fechar menu</a>
-                </li>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="teste.html">Formulário</a>
-                </li>
-                <li>
-                    <a href="browser.html">Browser</a>
-                </li>
-            </ul>
+			<ul data-role="listview" data-theme="a" class="nav-search">
+				<li data-icon="delete">
+					<a href="#" data-rel="close">Fechar menu</a>
+				</li>
+				<li>
+					<a href="index.html">Home</a>
+				</li>
+				<li>
+					<a href="teste.html">Formulário</a>
+				</li>
+				<li>
+					<a href="browser.html">Browser</a>
+				</li>
+			</ul>
 
-        </div><!-- /panel -->
+		</div><!-- /panel -->
 
-        <div data-role="content" class="jqm-content">
+		<div data-role="content" class="jqm-content">
+			
 
-           <form class="userform">
+		</div><!-- /content -->
 
-            <h2>Login</h2>
+		<div data-role="footer" data-position="fixed" data-theme="f">
+			<h4>UniRN APP</h4>
+		</div>
 
-            <label for="name">Username:</label>
-            <input type="text" name="name" id="name" value="" data-clear-btn="true" data-mini="true">
+	</div> <!-- /page -->
 
-            <label for="password">Password:</label>
-            <input type="password" name="password" id="password" value="" data-clear-btn="true" autocomplete="off" data-mini="true">
-
-            <div class="ui-grid-a">
-                <div class="ui-block-a"><a href="#" data-rel="close" data-role="button" data-theme="c" data-mini="true">Cancel</a></div>
-                <div class="ui-block-b"><a href="#" data-rel="close" data-role="button" data-theme="b" data-mini="true">Save</a></div>
-            </div>
-        </form>
-
-    </div><!-- /content -->
-
-    <div data-role="footer" data-position="fixed" data-theme="f">
-        <h4>UniRN APP</h4>
-    </div>
-
-</div> <!-- /page -->
-
-<!-- Add your site or application content here -->
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+	<!-- Add your site or application content here -->
+	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 </body>
 </html>
