--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <!--
         <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
     -->
+    <script src="cordova.js"></script>
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/jquery.mobile-1.4.3.min.js"></script>
-    <script src="assets/js/cordova.js"></script>
     <script src="assets/js/index.js"></script>
 
     <link rel="stylesheet" href="assets/css/style.css">
