--- a/teste.html
+++ b/teste.html
@@ -13,7 +13,7 @@
         <!--
         <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
     -->
-    <script type="text/javascript" language="JavaScript" src="cordova.js"></script>
+    <script src="cordova.js"></script>
     <script language="JavaScript" src="assets/js/jquery.js"></script>
     <script language="JavaScript" src="assets/js/jquery.mobile-1.4.3.min.js"></script>
     <script language="JavaScript" src="assets/js/index.js"></script>
