--- a/browser.html
+++ b/browser.html
@@ -16,12 +16,12 @@
     <script src="cordova.js"></script>
     <script language="JavaScript" src="assets/js/jquery.js"></script>
     <script language="JavaScript" src="assets/js/jquery.mobile-1.4.3.min.js"></script>
-    <script language="JavaScript" src="assets/js/browser.js"></script>
+    <script language="JavaScript" src="assets/js/index.js"></script>
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/jquery.mobile-1.4.3.min.css">
 </head>
-<body onload="onLoad()">
+<body onload="openFacebook()">
 
 	<div data-role="page" class="jqm-demos ui-responsive-panel" id="panel-fixed-page1">
 		<div data-role="header" data-theme="f" data-position="fixed">
@@ -49,7 +49,7 @@
 		</div><!-- /panel -->
 
 		<div data-role="content" class="jqm-content">
-			
+
 
 		</div><!-- /content -->
 
