--- a/browser.html
+++ b/browser.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/jquery.mobile-1.4.3.min.css">
 </head>
-<body onload="openFacebook()">
+<body>
 
 	<div data-role="page" class="jqm-demos ui-responsive-panel" id="panel-fixed-page1">
 		<div data-role="header" data-theme="f" data-position="fixed">
@@ -42,7 +42,7 @@
 					<a href="teste.html">Formulário</a>
 				</li>
 				<li>
-					<a href="browser.html">Browser</a>
+					<a id="goface" href="browser.html">Browser</a>
 				</li>
 			</ul>
 
