--- a/teste.html
+++ b/teste.html
@@ -42,7 +42,7 @@
                     <a href="teste.html">Formulário</a>
                 </li>
                 <li>
-                    <a href="browser.html">Browser</a>
+                    <a id="goface" href="browser.html">Browser</a>
                 </li>
             </ul>
 
