add vibrate test

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 
             <p><a href="#" id="alert">Alerta</a></p>
 
+            <button id="vibrate" class="ui-btn">Click me</button>
+
         </div><!-- /content -->
 
         <div data-role="footer" data-position="fixed" data-theme="f">
