--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <p><a href="#" id="alert">Alerta</a></p>
 
-            <button id="vibrate" class="ui-btn">Click me</button>
+            <a href="#" onclick="vibrate(); return false;" class="ui-btn">Click me</a>
 
         </div><!-- /content -->
 
