--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
             <h5>H5</h5>
             <h6>H6</h6>
 
-            <p><a href="#" id="alert">Alerta</a></p>
+            <!-- <p><a href="#" id="alert">Alerta</a></p> -->
 
-            <a href="#" onclick="vibrate(); return false;" class="ui-btn">Click me</a>
+            <a href="#" onclick="showAlert(); return false;" class="ui-btn">Alert</a>
+            <a href="#" onclick="playBeep(); return false;" class="ui-btn">Beep</a>
+            <a href="#" onclick="vibrate(); return false;" class="ui-btn">vibration</a>
 
         </div><!-- /content -->
 
