--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
             <!-- <p><a href="#" id="alert">Alerta</a></p> -->
 
-            <a href="#" onclick="showAlert(); return false;" class="ui-btn">Alert</a>
-            <a href="#" onclick="playBeep(); return false;" class="ui-btn">Beep</a>
-            <a href="#" onclick="vibrate(); return false;" class="ui-btn">vibration</a>
+            <a href="#" id="alert" class="ui-btn">Alert</a>
+            <a href="#" id="beep" class="ui-btn">Beep</a>
+            <a href="#" id="vibrate" class="ui-btn">vibration</a>
 
         </div><!-- /content -->
 
