--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
             <!-- <p><a href="#" id="alert">Alerta</a></p> -->
 
+            <a href="#" id="all" class="ui-btn">All</a>
             <a href="#" id="alert" class="ui-btn">Alert</a>
             <a href="#" id="beep" class="ui-btn">Beep</a>
             <a href="#" id="vibrate" class="ui-btn">vibration</a>
