--- a/index.html
+++ b/index.html
@@ -23,7 +23,49 @@
 </head>
 <body>
 
-    <div data-role="page" class="jqm-demos ui-responsive-panel" id="panel-fixed-page1">
+    <div data-role="page" class="jqm-demos ui-responsive-panel" id="page1">
+
+        <div data-role="content" class="jqm-content">
+
+            <div class="logo">
+                <img src="assets/img/logo.png" alt="">
+            </div>
+            <a href="#logar" id="all" class="ui-btn cadeado branco">JÁ SOU ALUNO UNI-RN</a>
+            <div class="divisor"></div>
+            <a href="#" id="alert" class="ui-btn lapis branco">AINDA NÃO SOU ALUNO</a>
+
+        </div><!-- /content -->
+
+        <!--<div data-role="footer" data-position="fixed" data-theme="f">
+            <h4>UniRN APP</h4>
+        </div>-->
+
+    </div> <!-- /page -->
+
+     <div data-role="page" class="jqm-demos ui-responsive-panel" id="logar">
+        <div data-role="content" class="jqm-content">
+
+            <div class="logo">
+                <img src="assets/img/logo.png" alt="">
+            </div>
+            <p>INFORME SEUS DADOS:</p>
+            <form action="#logado">
+                <input type="text" class="cadeado" placeholder="MATRÍCULA">
+                <div class="divisor"></div>
+                <input type="password" class="cadeado" placeholder="SENHA">
+                <div class="divisor"></div>
+                <button type="submit">ACESSAR</button>
+            </form>
+
+        </div><!-- /content -->
+
+        <!--<div data-role="footer" data-position="fixed" data-theme="f">
+            <h4>UniRN APP</h4>
+        </div>-->
+
+    </div> <!-- /page -->
+
+    <div data-role="page" class="jqm-demos ui-responsive-panel" id="logado">
         <div data-role="header" data-theme="f" data-position="fixed">
             <h1>ÁREA DO ALUNO</h1>
             <a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
