--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 <img src="assets/img/logo.png" alt="">
             </div>
             <p>INFORME SEUS DADOS:</p>
-            <form action="#logado">
-                <input type="text" class="cadeado" placeholder="MATRÍCULA">
+            <form id="form_login" action="#logado">
+                <input type="text" id="matricula" class="cadeado" placeholder="MATRÍCULA">
                 <div class="divisor"></div>
-                <input type="password" class="cadeado" placeholder="SENHA">
+                <input type="text" id="cpf" class="cadeado" placeholder="CPF">
                 <div class="divisor"></div>
                 <button type="submit">ACESSAR</button>
             </form>
