removendo action do formulario

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                 <img src="assets/img/logo.png" alt="">
             </div>
             <p>INFORME SEUS DADOS:</p>
-            <form id="form_login" action="#logado">
+            <form id="form_login">
                 <input type="text" id="matricula" class="cadeado" placeholder="MATRÍCULA">
                 <div class="divisor"></div>
                 <input type="text" id="cpf" class="cadeado" placeholder="CPF">
                 <div class="divisor"></div>
-                <button type="submit">ACESSAR</button>
+                <button id="btn-acessar" type="submit">ACESSAR</button>
             </form>
 
         </div><!-- /content -->
