--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="divisor"></div>
                 <input type="text" id="cpf" class="cadeado" placeholder="CPF">
                 <div class="divisor"></div>
-                <button id="btn-acessar" type="submit">ACESSAR</button>
+                <button id="btn-acessar">ACESSAR</button>
             </form>
 
         </div><!-- /content -->
