--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             </div>
             <p>INFORME SEUS DADOS:</p>
             <form id="form_login">
-                <input type="text" id="matricula" class="cadeado" placeholder="MATRÍCULA">
+                <input type="number" id="matricula" class="cadeado" placeholder="MATRÍCULA">
                 <div class="divisor"></div>
-                <input type="text" id="cpf" class="cadeado" placeholder="CPF">
+                <input type="number" id="cpf" class="cadeado" placeholder="CPF">
                 <div class="divisor"></div>
                 <button id="btn-acessar">ACESSAR</button>
             </form>
