removendo action de dentro do type do buttom

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="divisor"></div>
                 <input type="number" id="cpf" class="cadeado" placeholder="CPF">
                 <div class="divisor"></div>
-                <button id="btn-acessar" type="button action="#"">ACESSAR</button>
+                <button id="btn-acessar" type="button">ACESSAR</button>
             </form>
 
         </div><!-- /content -->
