--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <a href="#logar" id="all" class="ui-btn cadeado branco">JÁ SOU ALUNO UNI-RN</a>
             <div class="divisor"></div>
-            <a href="#" id="alert" class="ui-btn lapis branco">AINDA NÃO SOU ALUNO</a>
+            <a href="#deslogado" id="alert" class="ui-btn lapis branco">AINDA NÃO SOU ALUNO</a>
 
         </div><!-- /content -->
 
@@ -111,6 +111,154 @@
         </div>-->
 
     </div> <!-- /page -->
+
+
+    <div data-role="page" class="jqm-demos ui-responsive-panel" id="deslogado">
+        <div data-role="header" data-theme="f" data-position="fixed">
+            <h1>TESTE VOCACIONAL</h1>
+            <a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
+        </div><!-- /header -->
+
+        <div data-role="panel" data-position-fixed="true" data-theme="a" id="nav-panel">
+
+            <ul data-role="listview" data-theme="a" class="nav-search">
+                <li data-icon="delete">
+                    <a href="#" data-rel="close">Fechar menu</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+            </ul>
+
+        </div><!-- /panel -->
+
+        <div data-role="content" class="jqm-content">
+
+            <div class="logo">
+                <img src="assets/img/logo.png" alt="">
+            </div>
+            <p>TEXTO INDICANDO QUE A PESSOA PODE REALIZAR UM TESTE:</p>
+            <div class="divisor"></div>
+            <a href="#questao1" id="all" class="ui-btn">INICIAR TESTE</a>
+
+        </div><!-- /content -->
+
+    </div> <!-- /page -->
+
+    <div data-role="page" class="jqm-demos ui-responsive-panel" id="questao1">
+        <div data-role="header" data-theme="f" data-position="fixed">
+            <h1>TESTE VOCACIONAL</h1>
+            <a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
+        </div><!-- /header -->
+
+        <div data-role="panel" data-position-fixed="true" data-theme="a" id="nav-panel">
+
+            <ul data-role="listview" data-theme="a" class="nav-search">
+                <li data-icon="delete">
+                    <a href="#" data-rel="close">Fechar menu</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+            </ul>
+
+        </div><!-- /panel -->
+
+        <div data-role="content" class="jqm-content">
+
+            <div class="logo menor">
+                <img src="assets/img/logo.png" alt="">
+            </div>
+            <p class="menor">Na Escola, você prefere/preferia:</p>
+            <div class="divisor"></div>
+            <a href="#questao2" id="all" class="ui-btn">ARTE, ESPORTE OU ATIVIDADES EXTRACURRICULARES</a>
+            <div class="divisor"></div>
+            <a href="#questao2" id="all" class="ui-btn">MATEMÁTICA, FÍSICA, QUÍMICA</a>
+            <div class="divisor"></div>
+            <a href="#questao2" id="all" class="ui-btn">CIÊNCIAS, BIOLOGIA</a>
+            <div class="divisor"></div>
+            <a href="#questao2" id="all" class="ui-btn">PORTUGUÊS, LITERATURA</a>
+
+        </div><!-- /content -->
+
+    </div> <!-- /page -->
+
+    <div data-role="page" class="jqm-demos ui-responsive-panel" id="questao2">
+        <div data-role="header" data-theme="f" data-position="fixed">
+            <h1>TESTE VOCACIONAL</h1>
+            <a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
+        </div><!-- /header -->
+
+        <div data-role="panel" data-position-fixed="true" data-theme="a" id="nav-panel">
+
+            <ul data-role="listview" data-theme="a" class="nav-search">
+                <li data-icon="delete">
+                    <a href="#" data-rel="close">Fechar menu</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+            </ul>
+
+        </div><!-- /panel -->
+
+        <div data-role="content" class="jqm-content">
+
+            <div class="logo menor">
+                <img src="assets/img/logo.png" alt="">
+            </div>
+            <p class="menor">Na Escola, você prefere/preferia:</p>
+            <div class="divisor"></div>
+            <a href="#fim_teste" id="all" class="ui-btn">ARTE, ESPORTE OU ATIVIDADES EXTRACURRICULARES</a>
+            <div class="divisor"></div>
+            <a href="#fim_teste" id="all" class="ui-btn">MATEMÁTICA, FÍSICA, QUÍMICA</a>
+            <div class="divisor"></div>
+            <a href="#fim_teste" id="all" class="ui-btn">CIÊNCIAS, BIOLOGIA</a>
+            <div class="divisor"></div>
+            <a href="#fim_teste" id="all" class="ui-btn">PORTUGUÊS, LITERATURA</a>
+
+        </div><!-- /content -->
+
+    </div> <!-- /page -->
+
+    <div data-role="page" class="jqm-demos ui-responsive-panel" id="fim_teste">
+        <div data-role="header" data-theme="f" data-position="fixed">
+            <h1>TESTE VOCACIONAL</h1>
+            <a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
+        </div><!-- /header -->
+
+        <div data-role="panel" data-position-fixed="true" data-theme="a" id="nav-panel">
+
+            <ul data-role="listview" data-theme="a" class="nav-search">
+                <li data-icon="delete">
+                    <a href="#" data-rel="close">Fechar menu</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+            </ul>
+
+        </div><!-- /panel -->
+
+        <div data-role="content" class="jqm-content">
+
+            <div class="logo menor">
+                <img src="assets/img/logo.png" alt="">
+            </div>
+            <p class="menor">RESULTADO DO TESTE / OPÇÕES DE ESCOLHA :</p>
+            <div class="divisor"></div>
+            <a href="#fim_teste" id="all" class="ui-btn">FISIOTERAPIA</a>
+            <div class="divisor"></div>
+            <a href="#fim_teste" id="all" class="ui-btn">MEDICINA</a>
+            <div class="divisor"></div>
+            <a href="#fim_teste" id="all" class="ui-btn">ENFERMAGEM</a>
+            <div class="divisor"></div>
+            <a href="#fim_teste" id="all" class="ui-btn">ODONTOLOGIA</a>
+
+        </div><!-- /content -->
+
+    </div> <!-- /page -->
+
 
     <!-- Add your site or application content here -->
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
