terminando programação do teste vocacional

--- a/index.html
+++ b/index.html
@@ -842,15 +842,15 @@
             </div>
             <p class="menor">Minha maior frustração seria:</p>
             <div class="divisor"></div>
-            <a href="#fim_teste" id="all" class="ui-btn check">Não ser bem sucedido profissionalmente.</a>
+            <a href="#fim_teste" id="all" class="ui-btn check" data-value="a">Não ser bem sucedido profissionalmente.</a>
             <div class="divisor"></div>
-            <a href="#fim_teste" id="all" class="ui-btn check">Não me destacar em minha área de atuação.</a>
+            <a href="#fim_teste" id="all" class="ui-btn check" data-value="b">Não me destacar em minha área de atuação.</a>
             <div class="divisor"></div>
-            <a href="#fim_teste" id="all" class="ui-btn check">Não construir uma família.</a>
+            <a href="#fim_teste" id="all" class="ui-btn check" data-value="c">Não construir uma família.</a>
             <div class="divisor"></div>
-            <a href="#fim_teste" id="all" class="ui-btn check">Não ter muito tempo para curtir a vida.</a>
+            <a href="#fim_teste" id="all" class="ui-btn check" data-value="d">Não ter muito tempo para curtir a vida.</a>
             <div class="divisor"></div>
-            <a href="#fim_teste" id="all" class="ui-btn check">Escolher a carreira errada e ter que mudar depois.</a>
+            <a href="#fim_teste" id="all" class="ui-btn check" data-value="e">Escolher a carreira errada e ter que mudar depois.</a>
 
         </div><!-- /content -->
 
