modificando tipo de campo do login

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <p>INFORME SEUS DADOS:</p>
             <form id="form_login" action="#">
-                <input type="number" id="matricula" class="cadeado" placeholder="MATRÍCULA">
+                <input type="text" id="matricula" class="cadeado" placeholder="MATRÍCULA">
                 <div class="divisor"></div>
                 <input type="number" id="cpf" class="cadeado" placeholder="CPF">
                 <div class="divisor"></div>
