--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="logo">
                 <img src="assets/img/logo.png" alt="">
             </div>
-            <p>TESTE VOCACIONAL: Descubra as carreiras que têm mais a ver com você.</p>
+            <p>TESTE VOCACIONAL: Descubra a carreira que têm mais a ver com você.</p>
             <div class="divisor"></div>
             <a href="#questao1" id="all" class="ui-btn">INICIAR TESTE</a>
 
