estabelecendo realmente o tamanho

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             </div>
             <p>INFORME SEUS DADOS:</p>
             <form id="form_login" action="#">
-                <input type="text" id="matricula" class="cadeado" size="11" placeholder="MATRÍCULA">
+                <input type="text" id="matricula" class="cadeado" maxlength="11" placeholder="MATRÍCULA">
                 <div class="divisor"></div>
-                <input type="number" id="cpf" class="cadeado" size="11" placeholder="CPF">
+                <input type="number" id="cpf" class="cadeado" maxlength="11" placeholder="CPF">
                 <div class="divisor"></div>
                 <button id="btn-acessar" type="button">ACESSAR</button>
             </form>
