Adicionando telefones uteis

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <a href="#logar" id="all" class="ui-btn cadeado branco">JÁ SOU ALUNO UNI-RN</a>
             <div class="divisor"></div>
             <a href="#deslogado" id="alert" class="ui-btn lapis branco">AINDA NÃO SOU ALUNO</a>
+            <div class="divisor"></div>
+            <a href="#telefone" id="fone" class="ui-btn telefones branco">TELEFONES ÚTEIS</a>
 
         </div><!-- /content -->
 
@@ -42,7 +44,7 @@
 
     </div> <!-- /page -->
 
-     <div data-role="page" class="jqm-demos ui-responsive-panel" id="logar">
+    <div data-role="page" class="jqm-demos ui-responsive-panel" id="logar">
         <div data-role="content" class="jqm-content">
 
             <div class="logo">
@@ -65,44 +67,43 @@
 
     </div> <!-- /page -->
 
-    <div data-role="page" class="jqm-demos ui-responsive-panel" id="logado">
-        <div data-role="header" data-theme="f" data-position="fixed">
-            <h1>ÁREA DO ALUNO</h1>
-            <a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
-        </div><!-- /header -->
 
-        <div data-role="panel" data-position-fixed="true" data-theme="a" id="nav-panel">
-
-            <ul data-role="listview" data-theme="a" class="nav-search">
-                <li data-icon="delete">
-                    <a href="#" data-rel="close">Fechar menu</a>
-                </li>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="teste.html">Formulário</a>
-                </li>
-                <li>
-                    <a id="goface" href="testes2.html">Antigo</a>
-                </li>
-                <li>
-                    <a id="goface" href="browser.html">Browser</a>
-                </li>
-            </ul>
-
-        </div><!-- /panel -->
-
+    <div data-role="page" class="jqm-demos ui-responsive-panel" id="telefone">
         <div data-role="content" class="jqm-content">
 
             <div class="logo">
                 <img src="assets/img/logo.png" alt="">
             </div>
-            <p>OLÁ FABIO RICARDO, SELECIONA A OPÇÕES DESEJADA:</p>
-            <div class="divisor"></div>
-            <a href="#" id="all" class="ui-btn academicas">INFORMAÇÕES ACADEMICAS</a>
-            <div class="divisor"></div>
-            <a href="#" id="alert" class="ui-btn financeiras">INFORMAÇÕES FINANCEIRAS</a>
+            <p>TELEFONES ÚTEIS:</p>
+            <p>
+                Reitoria: <a id="reitoria">3215-2989</a><br/>
+                Comunicação: <a id="comunicacao">3215-2991</a><br/>
+                Central de Atendimento: <a id="centralAtendimento">3215-2939</a><br/>
+                Secretaria das coordenações: <a id="coordenacoes">3215-2936</a><br/>
+                Coord. Direito: <a id="direito">3215-2937</a><br/>
+                Coord. Psicologia: <a id="psicologia">3215-2940</a><br/>
+                Coord. Enfermagem: <a id="enfermagem">3215-2979</a><br/>
+                Coord. bsi e redes de computadores: <a id="redes">3215-2934</a><br/>
+                Coord. Ed.física: <a id="edfisica">3215-2949</a><br/>
+                Coord. Fisioterapia: <a id="fisioterapia">3215-2951</a><br/>
+                Coord. Administração e Gestão Comercial: <a id="administracao">3215-2935</a><br/>
+                Coord. Nutrição: <a id="nutricao">3215-2946</a><br/>
+                Coord. Engenharia Civil: <a id="engenharia">3215-2961</a><br/>
+                Biblioteca: <a id="biblioteca">3215-2926</a><br/>
+                Atendimento Financeiro: <a id="financeiro">3215-2919</a><br/>
+                Pós-Graduação: <a id="pos">3215-2973</a><br/>
+                Controle Acadêmico: <a id="controleacademico">3215-2903</a><br/>
+                Gerência Informática: <a id="informatica">3215-2929</a><br/>
+                AVA: <a id="ava">3215-2974</a><br/>
+                FIES: <a id="fies">3215-2998</a><br/>
+                Convênios e Estágios: <a id="estagios">3215-2977</a><br/>
+                Núcleo de Carreira: <a id="carreira">3215-2970</a><br/>
+                Núcleo de Extensão: <a id="extensao">3215-2925</a><br/>
+                Prefeitura do Campus: <a id="prefeitura">3215-2938</a><br/>
+                Callcenter: <a id="callcenter">3215-2917</a><br/>
+                Clínicas Integradas: <a id="clinicas">3215-2960</a><br/>
+                Prática Jurídica: <a id="juridica">3215-2890</a><br/>
+            </p>
 
         </div><!-- /content -->
 
@@ -111,6 +112,8 @@
         </div>-->
 
     </div> <!-- /page -->
+
+
 
 
     <div data-role="page" class="jqm-demos ui-responsive-panel" id="deslogado">
@@ -144,7 +147,7 @@
         </div><!-- /content -->
 
     </div> <!-- /page -->
-<!-- ###############################################################################################Teste#Vocacional###################################################################################### -->
+    <!-- ###############################################################################################Teste#Vocacional###################################################################################### -->
     <div data-role="page" class="jqm-demos ui-responsive-panel" id="questao1">
         <div data-role="header" data-theme="f" data-position="fixed">
             <h1>TESTE VOCACIONAL</h1>
@@ -814,7 +817,7 @@
     </div> <!-- /page -->
 
 
-<!--  Ultima -->
+    <!--  Ultima -->
 
     <div data-role="page" class="jqm-demos ui-responsive-panel" id="questao17">
         <div data-role="header" data-theme="f" data-position="fixed">
@@ -856,7 +859,7 @@
 
     </div> <!-- /page -->
 
-<!-- ###############################################################################################Teste#Vocacional###################################################################################### -->
+    <!-- ###############################################################################################Teste#Vocacional###################################################################################### -->
 
 
     <div data-role="page" class="jqm-demos ui-responsive-panel" id="fim_teste">
