Trying push notification

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="cordova.js"></script>
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/jquery.mobile-1.4.3.min.js"></script>
+    <script type="text/javascript" src="PushNotification.js"></script>
     <script src="assets/js/index.js"></script>
 
     <link rel="stylesheet" href="assets/css/style.css">
