--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <h1>TELEFONES ÚTEIS</h1>
             <a href="#page1" data-rel="back" data-icon="carat-l" data-iconpos="notext">Back</a>
         </div>
-        <div data-role="content" data-position-fixed="true" class="jqm-content">
+        <div data-role="content" class="jqm-content">
 
             <div class="logo">
                 <a href="#page1">
