Trying push notification

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
     <div data-role="page" class="jqm-demos ui-responsive-panel" id="telefone">
-        <div data-role="header" data-position="fixed" data-theme="f">
+        <div data-role="header" data-theme="f">
             <h1>TELEFONES ÚTEIS</h1>
             <a href="#page1" data-rel="back" data-icon="carat-l" data-iconpos="notext">Back</a>
         </div>
