--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 
 
     <div data-role="page" class="jqm-demos ui-responsive-panel" id="telefone">
-        <div data-role="header" data-theme="f">
+        <div data-role="header" data-position="fixed" data-theme="f">
             <h1>TELEFONES ÚTEIS</h1>
             <a href="#page1" data-rel="back" data-icon="carat-l" data-iconpos="notext">Back</a>
         </div>
-        <div data-role="content" class="jqm-content">
+        <div data-role="content" data-position-fixed="true" class="jqm-content">
 
             <div class="logo">
                 <a href="#page1">
